2002-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.3+cvs

2002-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.3
	* version.c.in: update
	* doc/README: version 0.3, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-03-06  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03084] A temporary file remains when pipe + 'v'
	* proto.h (saveBufferDelNum): deleted
	* file.c (saveBufferDelNum): deleted
	* file.c (saveBuffer): saveBufferDelNum() renamed 
	* main.c (vwSrc): tmpfname() recorded as fileToDelete
			use saveBuffer() instead of saveBufferDelNum()

2002-03-04  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc-jp/MANUAL.html: add note about file:/cgi-bin
	* doc/MANUAL.html: ditto

2002-03-01  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03073] frame + image
	* file.c (loadGeneralFile): w3m_dump & ~DUMP_FRAME
	* file.c (loadImageBuffer): comment out if (frame_source)

2002-03-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03072] Proxy-Authorization (Re:  Re: https through proxy)
	* file.c (loadGeneralFile) delete Proxy-Authorization set here
	* fm.h (HR_FLAG_PROXY): added
	* main.c (MAIN): need "Basic " for proxy_auth_cookie
	* url.c (HTTPrequest): add seen_proxy_auth
		if proxy and no Proxy-Authorization: header seen and
		has proxy_auth_cookie, use it
	* url.c (openURL): hr->flag |= HR_FLAG_PROXY
	
	* file.c (loadGeneralFile) comment indent fix
	* html.c (TagMAP): ditto

2002-02-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03070] Re: https through proxy
	* url.c (openURL): pass extra_header (Proxy-Authorization:)

2002-02-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03067] Re: https through proxy
	* file.c (loadGeneralFile): comment out ssl_get_certificate here

2002-02-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00691] Re: w3m 0.2.5.1 fails to recognize '<dt id="XXX">'
	* html.c: ATTR_CORE for dt, dd, blockquote, caption 

2002-02-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
